--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher: ^6.2.6
+  flutter_spinkit: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_map: ^8.2.0
+  latlong2: ^0.9.1
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
