--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_map: ^8.2.0
   latlong2: ^0.9.1
   geolocator: ^12.0.0
+  graphql_flutter: ^5.2.0
+  timezone: ^0.10.0
 
 dev_dependencies:
   flutter_test:
