--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ migrate_working_dir/
 # Symbolication related
 app.*.symbols
 
-*/lib/constants.dart
+*.constants.dart
 
 # Obfuscation related
 app.*.map.json
