added a simple sheet at the bottom to store nearby transit predictions and the beginning of a settings page

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ migrate_working_dir/
 # Symbolication related
 app.*.symbols
 
-*.constants.dart
+*lib/constants.dart
 
 # Obfuscation related
 app.*.map.json
