added a simple sheet at the bottom to store nearby transit predictions and the beginning of a settings page

--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,6 @@ migrate_working_dir/
 # Symbolication related
 app.*.symbols
 
-.lib/constants.dart
-
 # Obfuscation related
 app.*.map.json
 
@@ -45,3 +43,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/lib/constants.dart
